✨ HTMLとマニフェストを更新し、アプリ名を「AIbleCode」に変更しました。また、学習コンポーネントのスタイルを改善し、レスポンシブデザインを強化しました。

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "AIbleCode",
+  "name": "AIbleCode - できる、プログラミング能力を。",
   "icons": [
     {
       "src": "favicon.ico",
