--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ace-builds": "^1.36.5",
     "axios": "^1.7.8",
     "brace": "^0.11.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-ace": "^13.0.0",
     "react-dom": "^18.3.1",
